--- a/estilos.css
+++ b/estilos.css
@@ -9,4 +9,27 @@ html, body {
   margin-bottom: 10px;
   height: 20px;
   text-align: right;
+  font-family: digital;
+  font-size: 5em;
+}
+
+.pantalla{
+  width: 344px;
+  height: 102px;
+  background-image: url("../image/fondoCalc.png");
+  background-repeat: repeat;
+  text-align: right;
+  margin-top: 39px;
+}
+.teclado{
+  display: flex;
+  flex-flow: row wrap;
+  margin-top: 16px;
+  width: 354px;
+  height: 373px;
+  justify-content: space-between;
+}
+.teclado img{
+  width: 22%;
+  height: 62.91px;
 }
