se subio la interfaz de la calculadora

--- a/estilos.css
+++ b/estilos.css
@@ -1,35 +1,71 @@
 html, body {
+  margin: 10px;
   padding: 10px;
+
 }
 
-#display {
-  width: 100px;
-  padding: 5px;
-  background: #DDD; 
-  margin-bottom: 10px;
-  height: 20px;
-  text-align: right;
-  font-family: digital;
-  font-size: 5em;
+.titulo-container{
+  width: 100%;
+  height: 15%;
+  color: #adf802;
+  border-radius: 1rem;
+  
+}
+.titulo-container h1{
+  font-size: 5rem;
+  font-family: 'Luckiest Guy', cursive;
+  text-shadow: 2px 2px 5px #000;
+}
+.titulo-container h1 span{
+  color: #17b456;
 }
 
-.pantalla{
-  width: 344px;
-  height: 102px;
-  background-image: url("../image/fondoCalc.png");
-  background-repeat: repeat;
-  text-align: right;
-  margin-top: 39px;
+
+.calculatorbody {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: minmax(120px, auto) repeat(7, 100px);
 }
-.teclado{
+
+.calculatorbody>button {
+  cursor: pointer;
+  font-size: 2rem;
+  border: 1px, solid #FFFFFF;
+  outline: none;
+  background-color: rbga(255, 255, 255, 0.75);
+}
+
+.calculatorbody>button:hover {
+  background-color: #a9a9a9;
+}
+
+.span-two {
+  grid-column: span 2;
+  color: #adf802;
+  background-color: rgba(194, 18, 18, 0.8);
+}
+
+.display {
+  grid-column: 1 / -1;
+  background-color: rgba(0, 0, 0, 0.75);
   display: flex;
-  flex-flow: row wrap;
-  margin-top: 16px;
-  width: 354px;
-  height: 373px;
-  justify-content: space-between;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
-.teclado img{
-  width: 22%;
-  height: 62.91px;
+
+.display .previous-operand {
+  color: rgba(255, 255, 255, 0.75);
+  font-size: 1.5rem;
+}
+
+.display .current-operand {
+  color: white;
+  font-size: 2.5rem;
 }
