--- a/estilos.css
+++ b/estilos.css
@@ -1,71 +1,63 @@
-html, body {
-  margin: 10px;
-  padding: 10px;
-
+html,
+body {
+    margin: 10px;
+    padding: 10px;
 }
 
-.titulo-container{
-  width: 100%;
-  height: 15%;
-  color: #adf802;
-  border-radius: 1rem;
-  
-}
-.titulo-container h1{
-  font-size: 5rem;
-  font-family: 'Luckiest Guy', cursive;
-  text-shadow: 2px 2px 5px #000;
-}
-.titulo-container h1 span{
-  color: #17b456;
+.titulo-container {
+    width: 100%;
+    height: 15%;
+    color: #adf802;
+    border-radius: 1rem;
 }
 
+.titulo-container h1 {
+    font-size: 5rem;
+    font-family: "Luckiest Guy", cursive;
+    text-shadow: 2px 2px 5px #000;
+}
+
+.titulo-container h1 span {
+    color: #17b456;
+}
 
 .calculatorbody {
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  min-height: 100vh;
-  grid-template-columns: repeat(4, 100px);
-  grid-template-rows: minmax(120px, auto) repeat(7, 100px);
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
 .calculatorbody>button {
-  cursor: pointer;
-  font-size: 2rem;
-  border: 1px, solid #FFFFFF;
-  outline: none;
-  background-color: rbga(255, 255, 255, 0.75);
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px, solid #ffffff;
+    outline: none;
+    background-color: rbga(255, 255, 255, 0.75);
 }
 
 .calculatorbody>button:hover {
-  background-color: #a9a9a9;
+    background-color: #a9a9a9;
 }
 
 .span-two {
-  grid-column: span 2;
-  color: #adf802;
-  background-color: rgba(194, 18, 18, 0.8);
+    grid-column: span 2;
+    color: #adf802;
+    background-color: rgba(194, 18, 18, 0.8);
 }
 
 .display {
-  grid-column: 1 / -1;
-  background-color: rgba(0, 0, 0, 0.75);
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-around;
-  flex-direction: column;
-  padding: 10px;
-  word-wrap: break-word;
-  word-break: break-all;
-}
-
-.display .previous-operand {
-  color: rgba(255, 255, 255, 0.75);
-  font-size: 1.5rem;
-}
-
-.display .current-operand {
-  color: white;
-  font-size: 2.5rem;
+    grid-column: 1 / -1;
+    background-color: #000;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+    font-size: 1.5rem;
+    color: white;
 }
